[gd_scene load_steps=8 format=3 uid="uid://cdnfhfmyr0s2r"]

[ext_resource type="Script" path="res://addons/godot_gameplay_systems/extended_character_nodes/nodes/3d/point_and_click_3d.gd" id="1_303p0"]
[ext_resource type="Script" path="res://examples/turn_based_top_down/turn_based_player.gd" id="1_lu0be"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/turn_based/nodes/TurnSubscriber.gd" id="3_kxm0n"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8sggy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ueetf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ltftp"]
albedo_color = Color(0.454902, 0.6, 0.423529, 1)
grow = true
grow_amount = -0.2

[sub_resource type="TorusMesh" id="TorusMesh_1p6n7"]
material = SubResource("StandardMaterial3D_ltftp")

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_lu0be")

[node name="PointAndClick3D" type="Node3D" parent="." node_paths=PackedStringArray("character_3d", "navigation_agent")]
script = ExtResource("1_303p0")
character_3d = NodePath("..")
navigation_agent = NodePath("../NavigationAgent3D")
clickable_layer = 31

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_8sggy")
skeleton = NodePath("../PointAndClick3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ueetf")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="TurnSubscriber" type="Node" parent="."]
script = ExtResource("3_kxm0n")

[node name="CurrentTurnIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.659721, 0)
mesh = SubResource("TorusMesh_1p6n7")
